@@ -43,6 +43,7 @@ Lua:
  - remove gl.PointSize, gl.PointSprite, gl.PointParameter
  - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen
  - remove gl.CreateList, gl.CallList, gl.DeleteList
+ - remove gl.DrawListAtUnit
  - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
  - remove LuaMaterial {pre,post}list
  - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
